--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -21,7 +21,8 @@ $code-gutter-bg: #474747;
 
 
 // FONTS
-$fonts: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$fonts: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$code-fonts: "Bitstream Vera Sans Mono", "Monaco", Consolas, Courier, monospace;
 
 
 // FOOTER
